# cuda_ndt_matcher

./: .envrc  .gitmodules  CLAUDE.md  Cargo.toml  README.md  justfile
docs/: autoware-comparison.md  autoware-ndt-tutorial.org  autoware_vs_cuda_comparison.md  cubecl-ndt-roadmap.md  debug-feature-comparison.md  debug-infrastructure.md  profiling-results.md  roadmap.md
docs/roadmap/: README.md  implementation-notes.md  phase-1-voxel-grid.md  phase-10-smart-pose-buffer.md  phase-11-gpu-zero-copy-pipeline.md  phase-12-gpu-derivative-pipeline.md  phase-13-gpu-scoring-pipeline.md  phase-14-iteration-optimization.md  phase-16-gpu-initial-pose-pipeline.md  phase-2-derivatives.md  phase-23-gpu-utilization.md  phase-24-cuda-graphs-pipeline.md  phase-25-code-restructure.md  phase-3-newton.md  phase-4-scoring.md  phase-5-integration.md  phase-6-validation.md  phase-7-ros-features.md  phase-8-autoware-parity.md  phase-9-gpu-acceleration.md
scripts/: clock_from_sensor.py  compare_poses.py  download_sample_data.sh  fix_rosbag_clock.py  play_rosbag.sh  run_demo.sh  run_ndt_simulation.sh
src/: Cargo.toml
src/cuda_ffi/: Cargo.toml  build.rs
src/cuda_ffi/csrc/: batch_persistent_ndt.cu  batched_solve.cu  cholesky_6x6.cuh  jacobi_svd_6x6.cuh  ndt_graph_common.cuh  ndt_graph_kernels.cu  persistent_ndt.cu  persistent_ndt_device.cuh  radix_sort.cu  segment_detect.cu  warp_cholesky.cuh  warp_reduce.cuh
src/cuda_ffi/src/: async_stream.rs  batch_persistent_ndt.rs  batched_solve.rs  graph_ndt.rs  lib.rs  persistent_ndt.rs  radix_sort.rs  segment_detect.rs  segmented_reduce.rs  texture.rs  voxel_hash.rs
src/cuda_ndt_matcher/: Cargo.toml  package.xml
src/cuda_ndt_matcher/src/: covariance.rs  diagnostics.rs  dual_ndt_manager.rs  initial_pose.rs  main.rs  map_module.rs  ndt_manager.rs  nvtl.rs  params.rs  particle.rs  pointcloud.rs  pose_buffer.rs  scan_queue.rs  tf_handler.rs  tpe.rs  visualization.rs
src/cuda_ndt_matcher_launch/config/: ndt_scan_matcher.param.yaml
src/cuda_ndt_matcher_launch/launch/: autoware_localization.launch.xml  cuda_localization.launch.xml  cuda_ndt_scan_matcher.launch.xml  ndt_replay_simulation.launch.xml  ndt_scan_matcher.launch.xml
src/individual_params/: CMakeLists.txt  package.xml
src/ndt_cuda/: Cargo.toml
src/ndt_cuda/src/: lib.rs  multi_grid.rs  ndt.rs  runtime.rs  test_utils.rs  timing.rs
src/ndt_cuda/src/derivatives/: angular.rs  cpu.rs  gpu.rs  gpu_batch.rs  gpu_jacobian.rs  mod.rs  pipeline.rs  types.rs
src/ndt_cuda/src/filtering/: cpu.rs  kernels.rs  mod.rs
src/ndt_cuda/src/optimization/: async_pipeline.rs  batch_pipeline.rs  debug.rs  full_gpu_pipeline_v2.rs  gpu_initial_pose.rs  gpu_newton.rs  gpu_pipeline_kernels.rs  line_search.rs  mod.rs  more_thuente.rs  newton.rs  oscillation.rs  regularization.rs  solver.rs  types.rs
src/ndt_cuda/src/scoring/: colors.rs  gpu.rs  metrics.rs  mod.rs  nvtl.rs  pipeline.rs
src/ndt_cuda/src/voxel_grid/: cpu.rs  gpu_builder.rs  kernels.rs  mod.rs  search.rs  types.rs
src/ndt_cuda/src/voxel_grid/gpu/: autoware_comparison.rs  grid.rs  mod.rs  morton.rs  pipeline.rs  radix_sort.rs  segments.rs  statistics.rs
tests/comparison/: justfile
tests/utils/: rosbag_parser.py
