[workspace]
resolver = "2"
members = [
    "src/cuda_ndt_matcher",
    "src/ndt_cuda",
]

[workspace.dependencies]
# Core utilities
anyhow = "1.0"
ctrlc = "3.4"
arc-swap = "1.7"
parking_lot = "0.12"
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
thiserror = "2.0"
rayon = "1.10"
approx = "0.5"

# ROS 2 dependencies - resolved via ament_index by cargo-ros2
rclrs = "*"
std_msgs = "*"
sensor_msgs = "*"
geometry_msgs = "*"
tf2_msgs = "*"
std_srvs = "*"
builtin_interfaces = "*"
tier4_localization_msgs = "*"
