[package]
name = "cuda_ndt_matcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
ctrlc.workspace = true

# Serialization for debug output
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arc-swap.workspace = true
parking_lot.workspace = true
nalgebra.workspace = true
rand.workspace = true
rand_distr.workspace = true

# CubeCL NDT (our implementation)
ndt_cuda = { path = "../ndt_cuda" }

# ROS 2 dependencies
rclrs.workspace = true
std_msgs.workspace = true
sensor_msgs.workspace = true
geometry_msgs.workspace = true
tf2_msgs.workspace = true
std_srvs.workspace = true
builtin_interfaces.workspace = true
tier4_localization_msgs.workspace = true
visualization_msgs = "*"
tier4_debug_msgs = "*"
autoware_map_msgs = "*"
diagnostic_msgs.workspace = true

[features]
default = []
# Enable JSONL debug output for alignment and pose initialization
debug-output = ["ndt_cuda/debug-iteration"]
# Enable voxel grid JSON dump for comparison with Autoware
debug-voxels = []
# Enable visualization debug features (markers, colored point clouds)
debug-markers = ["ndt_cuda/debug-iteration"]
# Enable all debug features
debug = ["debug-output", "debug-voxels", "debug-markers", "ndt_cuda/debug"]
# Forward profiling to ndt_cuda
profiling = ["ndt_cuda/profiling"]
