[package]
name = "ndt_cuda"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CubeCL-based CUDA NDT scan matching"

[dependencies]
# CubeCL for GPU compute
# Note: Version 0.9.0-pre has significant API changes requiring major refactoring.
# Staying on 0.8.x until 0.9.0 stable is released with migration guide.
cubecl = { version = "0.8", features = ["cuda"] }

# cudarc for cuSOLVER (GPU Newton solve)
# Note: Using cuda-12050 because Jetson Tegra drivers are missing:
# - cuEventElapsedTime_v2 (required by cuda-12080+)
# - cusolverDnXgeev (required by cuda-12060+)
cudarc = { version = "0.18", default-features = false, features = [
    "std",
    "driver",
    "cusolver",
    "dynamic-loading",
    "cuda-12050",
] }

# CUB radix sort via FFI
cuda_ffi = { path = "../cuda_ffi" }

# Linear algebra
nalgebra = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging (tracing for ROS-independent library; cuda_ndt_matcher uses rclrs logging)
tracing = "0.1"

# Parallel CPU (for reference implementation)
rayon = "1.10"

# KD-tree for voxel centroid radius search
kiddo = "4"

# Serialization for debug output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Testing
rand = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }

[features]
default = ["cuda"]
cuda = []

# === Debug Features ===
# Enable detailed timing instrumentation for profiling
profiling = []
# Enable per-iteration optimization data collection (pose, score, gradient, Hessian)
debug-iteration = []
# Enable GPU vs CPU covariance comparison during voxel grid construction
debug-cov = []
# Enable voxel-per-point distribution tracking
debug-vpp = []
# Convenience alias for all debug features
debug = ["debug-iteration", "debug-cov", "debug-vpp", "profiling"]

# Enable verbose debug output in tests (println! statements)
test-verbose = []
